--- a/src/beers-page.html
+++ b/src/beers-page.html
@@ -1,5 +1,6 @@
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/vaadin-grid/vaadin-grid.html">
 
 <dom-module id="beers-page">
 
