--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
   </script>
-  <script type="text/javascript" src="/scripts/main.js"></script>
 
+  <link rel="import" href="bower_components/polymerfire/firebase-app.html">
   <link rel="import" href="/src/beer-club-app.html">
 
   <style>
@@ -66,7 +66,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 </head>
 <body>
-
+<firebase-app name="beerClub"
+ api-key="AIzaSyCtPrH_2vdT2e4g6a07azRHCgrDUm6AGLc"
+ auth-domain="beer-club-ebef0.firebaseapp.com"
+ database-url="https://beer-club-ebef0.firebaseio.com"></firebase-app>
   <beer-club-app>My App</beer-club-app>
 
 </body>
