--- a/index.html
+++ b/index.html
@@ -1,76 +1,20 @@
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <!doctype html>
-<html lang="en">
+
+<html>
 <head>
+  <title>Beer Club</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-
-  <title>My App</title>
-
-  <link rel="shortcut icon" sizes="32x32" href="/images/app-icon-32.png">
-
-  <meta name="theme-color" content="#fff">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="manifest" href="/manifest.json">
-
-  <script>
-
-    // setup Polymer options
-    window.Polymer = {lazyRegister: true, dom: 'shadow'};
-
-    // load webcomponents polyfills
-    (function() {
-      if ('registerElement' in document
-          && 'import' in document.createElement('link')
-          && 'content' in document.createElement('template')) {
-        // browser has web components
-      } else {
-        // polyfill web components
-        var e = document.createElement('script');
-        e.src = '/bower_components/webcomponentsjs/webcomponents-lite.min.js';
-        document.body.appendChild(e);
-      }
-    })();
-
-    // load pre-caching service worker
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('/service-worker.js');
-      });
-    }
-
-  </script>
-
+  <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="bower_components/polymerfire/firebase-app.html">
-  <link rel="import" href="/src/beer-club-app.html">
-
-  <style>
-
-    body {
-      margin: 0;
-      font-family: 'Roboto', 'Noto', sans-serif;
-      line-height: 1.5;
-      min-height: 100vh;
-      background-color: #eee;
-    }
-
-  </style>
-
+  <link rel="import" href="/src/beer-club-app/beer-club-app.html">
 </head>
 <body>
-<firebase-app name="beerClub"
- api-key="AIzaSyCtPrH_2vdT2e4g6a07azRHCgrDUm6AGLc"
- auth-domain="beer-club-ebef0.firebaseapp.com"
- database-url="https://beer-club-ebef0.firebaseio.com"></firebase-app>
-  <beer-club-app>My App</beer-club-app>
-
+  <firebase-app name="beerClub"
+  api-key="AIzaSyCtPrH_2vdT2e4g6a07azRHCgrDUm6AGLc"
+  auth-domain="beer-club-ebef0.firebaseapp.com"
+  database-url="https://beer-club-ebef0.firebaseio.com"></firebase-app>
+  <beer-club-app></beer-club-app>
 </body>
 </html>
